fix headline overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,50 @@
 * {
   color: white;
+  background-size: cover;
 }
 
 .App {
   min-height: 100vh;
-  
 }
 
 .app-body {
   max-width: 1440px;
-  height: 100vh;
-  margin-left: 5rem;
-  margin-right: 5rem;
+  height: auto;
+  min-height: 100vh;
+  margin: 0 auto;
   padding-top: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-body > * {
+  width: 90vw;
   display: grid;
   grid-template-columns: 25% 25% 10% 25% 15%;
-  grid-template-rows: 30% 40% 30%;
   grid-gap: 0 0;
 }
+
+.row-1 {
+  max-height: 30%;
+}
+
+.row-2 {
+  min-height: 40%;
+  height: auto;
+}
+
+.row-3 {
+  height: 30%;
+  background-color: white;
+  padding-top: 8vh;
+  padding-bottom: 8vh;
+}
+
+/**************************************************/
+/* FIRST ROW SELECTORS */
+/**************************************************/
 
 .list-logo {
   grid-column: 1 / span 1;
@@ -38,34 +65,56 @@
 }
 
 .contact {
-  grid-column: 5 / span 1;
+  grid-column: 2 / span 4;
 }
 
 .contact-btn {
   border: solid 1px white;
   padding: 0.75rem 2rem;
   background-color: transparent;
+  float: right;
+  cursor: pointer;
+}
+
+/**************************************************/
+/* SECOND ROW SELECTORS */
+/**************************************************/
+
+.headline, 
+.subhead {
+  display: flex;
+  align-items: center;
 }
 
 .headline {
   grid-column: 1 / span 2;
-  grid-row: 2 / span 1;
-  padding-right: 2rem;
-  height: 100%;
+  height: auto;
   min-height: 100%;
-  
+  font-size: 2.7rem;
 }
 
 .subhead {
   grid-column: 4 / span 2;
-  grid-row: 2 / span 1;
 }
 
+/* Place subhead under the header for smaller screens */
+@media only screen and (max-width: 780px) {
+  .headline {
+    grid-column: 1 / span 5;
+    grid-row: 1 / span 1;
+  }
+  .subhead {
+    grid-column: 1 / span 5;
+    grid-row: 2 / span 2;
+  }
+}
+
+/**************************************************/
+/* THIRD ROW SELECTORS */
+/**************************************************/
+
 .cta-content {
-  background-color: white;
-  color: black;
   grid-column: 1 / span 3;
-  grid-row: 3 / span 1;
   display: flex;
   align-items: center;
   padding-left: 3.5rem;
@@ -73,9 +122,7 @@
 }
 
 .cta-talk {
-  background-color: white;
   grid-column: 4 / span 2;
-  grid-row: 3 / span 1;
   display: flex;
   align-items: center;
   text-transform: uppercase;
@@ -84,10 +131,10 @@
 .talk-arrow {
   color: orange;
   font-size: 1rem; 
+  cursor: pointer;
 }
 
 .cta-content > *,
 .cta-talk > * {
   color: black;
-  background-color: white;
 }
